acvus-mir-test/tests/snapshots/e2e__script_while_loop.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 |   r0 = fetch @n
     1 |   assign @n = r0
     2 |   jump L0
     3 | L0:
     4 |   r1 = take @n
     6 |   r2 = r1 > 0 (r3)
     7 |   jump_if r2 then L1 else L2
     8 | L1:
     9 |   r4 = take @n
    11 |   r5 = r4 - 1 (r6)
    12 |   assign @n = r5
    13 |   jump L0
    14 | L2:

    ; r0 (@n) : Int
    ; r1 (@n) : Int
    ; r2 (v5) : Bool
    ; r3 (v4) : Int
    ; r4 (@n) : Int
    ; r5 (v8) : Int
    ; r6 (v7) : Int
    ; r7 (@n) : Int
