acvus-mir-test/tests/snapshots/e2e__sroa_context_destructure_field_to_context.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 |   r0 = ref @b
     1 |   r1 = load r0
     2 |   r2 = r1.x
     3 |   r3 = ref @a
     4 |   store r3 = r2
     5 |   r4 = ref @a
     6 |   return r2

    ; r0 (v6) : Ref<{x: Int}>
    ; r1 (v7) : {x: Int}
    ; r2 (v2) : Int
    ; r3 (@a) : Ref<Int>
    ; r4 (@a) : Ref<Int>
    ; r5 (@b.x) : Ref<Int>
    ; r6 (v5) : Int
