acvus-mir-test/tests/snapshots/e2e__sroa_context_destructure_then_overwrite.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 |   r0 = ref @a
     1 |   r1 = load r0
     2 |   r2 = ref @b
     3 |   r3 = load r2
     4 |   r4 = r3.x
     5 |   r5 = ref @a
     6 |   store r5 = r4
     8 |   r6 = ref @a
     9 |   store r6 = 0 (r7)
    10 |   r8 = ref @a
    11 |   return 0 (r7)

    ; r0 (v11) : Ref<Int>
    ; r1 (v10) : Int
    ; r2 (v8) : Ref<{x: Int}>
    ; r3 (v9) : {x: Int}
    ; r4 (v2) : Int
    ; r5 (@a) : Ref<Int>
    ; r6 (@a) : Ref<Int>
    ; r7 (v4) : Int
    ; r8 (@a) : Ref<Int>
    ; r9 (v7) : Int
    ; r10 (@b.x) : Ref<Int>
