acvus-mir-test/tests/snapshots/e2e__sroa_context_field_read_2depth.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 |   r0 = ref @obj
     1 |   r1 = load r0
     2 |   r2 = r1.a.b
     3 |   r3 = call #0(r2)
     4 |   return r3

    ; r0 (v4) : Ref<{a: {b: Int}}>
    ; r1 (v5) : {a: {b: Int}}
    ; r2 (v2) : Int
    ; r3 (to_string(...)) : String
    ; r4 (@obj.a.b) : Ref<Int>
