acvus-mir-test/tests/snapshots/e2e__sroa_field_read_arithmetic.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 |   r0 = take @obj.val
     2 |   r1 = r0 + 1 (r2)
     3 |   return r1

    ; r0 (@obj.val) : Int
    ; r1 (v3) : Int
    ; r2 (v2) : Int
